# homework-on-sets

./: README.md  README.md_old  config_test.sh  pyproject.toml
src/homework1/: set_operations.py
tests/: test_integration_tests.py  test_set_operations.py
